@@ -1,16 +1,0 @@
-<html>
-	<head>
-		<title>AweMUD NG</title>
-	</head>
- 
-	<body bgcolor="#FFFFFF" text="#000000">
-		<b>AweMUD NG Documents:</b>
-
-		<ul>
-			<li><b>Scripting Reference</b> - <a href="script-guide.html/index.html">[View]</a></p>
-				A simple reference of the scripting API.
-			</p></li>
-		</ul>
-	</body>
-</html>
-
